// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`abbreviation > should log resolved tasks only 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hell goodbye cop
---------- Stdout ------------
[log] Resolved tasks:
    <Bold><Yellow>hell</Yellow></BoldDim>  → <Green><Bold>root:hello</BoldDim></Green>
    <Bold><Yellow>cop </Yellow></BoldDim>  → <Green><Bold>root:copy</BoldDim></Green>

[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from nadle!
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>goodbye</BoldDim> <Yellow>STARTED</Yellow>

Goodbye, tak!
[log]
<Green>✓</Green> Task <Bold>goodbye</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>prepare</BoldDim> <Yellow>STARTED</Yellow>

Preparing...
[log]
<Green>✓</Green> Task <Bold>prepare</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>copy</BoldDim> <Yellow>STARTED</Yellow>

Copying from assets/ to dist/
[log]
<Green>✓</Green> Task <Bold>copy</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>4</BoldDim> tasks executed
`;

exports[`abbreviation > should resolve abbr task properly 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hell
---------- Stdout ------------
[log] Resolved tasks:
    <Bold><Yellow>hell</Yellow></BoldDim>  → <Green><Bold>root:hello</BoldDim></Green>

[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> <Yellow>STARTED</Yellow>

Hello from nadle!
[log]
<Green>✓</Green> Task <Bold>hello</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
